--- a/test2.css
+++ b/test2.css
@@ -13,13 +13,14 @@ height: 100vh;
 .container-item-img{
     border: 1px solid #ccc;
     height: 150px;
-   
+  
 }
 .container-item-img img{
-    
-    height: auto;
+    /* 定義するときは必ずimgタグに対して直接指定すること */
+    object-fit: fill;
     max-width: 100%;
-    height: 150px;
-    object-fit: fill;/* 高さを調整する*/
-    width: 100%;
+    width: 100%;/* 必ず幅を定義*/
+    height: 150px;/* 必ず高さを定義*/
+   
+    
 }
