--- a/test.css
+++ b/test.css
@@ -2,65 +2,30 @@ body {
 width: 100vw;
 height: 100vh;
 background-color: black;
-}
-.test1{
+}.test1{
   height: 20%;
   width: 100%;
   padding-bottom: 140px
-}
-.test1 h1{
+}.test1 h1{
   color: transparent;
   font-weight: bold;
   background-image: url("7ztu.gif");
   text-align: center;
   -webkit-background-clip: text;
   font-size: 150px;
-}
-.test2{
+}.test2{
 width: 100%;
 height: 60%;
 display:flex;
 padding-top: 30px;
-}
-.img-box{
+}.img-box{
   width: 50%;
   height: 100%;
   margin: 0 auto;
-}
-.img-box img{
+}.img-box img{
  object-fit: contain;
  width: 100%;
  height: 100%;
-}
-.img-box2{
-width: 50%;
-height: 100%;
-margin: 0 auto;
-}
-.img-box2 img{
-object-fit: contain;
- width: 100%;
- height: 100%;
-}
-.img-box3{
-  width: 50%;
-  height: 100%;
-  margin: 0 auto;
-}
-.img-box3 img{
-  object-fit: contain;
-   width: 100%;
-   height: 100%;
-  }
-.img-box4{
-  width: 50%;
-  height: 100%;
-  margin: 0 auto;
-  }
-.img-box4 img{
-  object-fit: contain;
-  width: 100%;
-  height: 100%;
 }
 /*
 @keyframes changeImage{
