--- a/test6.css
+++ b/test6.css
@@ -1,3 +1,7 @@
+*{
+    padding: 0px;
+    margin: 0px;
+}
 .data-base{
     width: 100vw;
     height: 100vh;
@@ -20,18 +24,27 @@ select{
     width: 400px;
     text-align: center;
 }
-.list{
+.list-box{
     width: 100%;
-    height: 30%;
+    height: 700px;
+    display: flex;
     
+}
+.list{
+    width: 80%;
+    height: 700px;
+    padding: 20px;
 }
 .list img{
     width: 100%;
     height: 80%;
-    object-fit: contain;
+    object-fit: cover;
     border: black 1px solid;
-
-    
+}
+.list-caption{
+    padding-top: 30px;
+    padding-left: 20px;
+    font-size: 20px;
 }
 .select-btn{
     width: 100%;
