--- a/test6.css
+++ b/test6.css
@@ -2,13 +2,16 @@
     padding: 0px;
     margin: 0px;
 }
+
 .data-base{
     width: 100vw;
     height: 100vh;
+    text-align: center;
 }
 .data-base{
     height: 10%;
-    text-align: center;
+    width: 100%;
+    
 }
 .header{
     width: 100%;
@@ -37,7 +40,7 @@ select{
 }
 .list img{
     width: 100%;
-    height: 80%;
+    height: 100%;
     object-fit: cover;
     border: black 1px solid;
 }
@@ -45,6 +48,9 @@ select{
     padding-top: 30px;
     padding-left: 20px;
     font-size: 20px;
+}
+#text-contents{
+    width: 100%;
 }
 .select-btn{
     width: 100%;
