--- a/test6.css
+++ b/test6.css
@@ -1,58 +1,44 @@
 *{
     padding: 0px;
     margin: 0px;
-}
-
-.data-base{
+}.data-base{
     width: 100vw;
     height: 100vh;
     text-align: center;
-}
-.data-base{
+}.data-base{
     height: 10%;
     width: 100%;
-    
-}
-.header{
+}.header{
     width: 100%;
     height: 10%;
     text-align: center;
     font-size: 70px;
-}
-h2{
+}h2{
     text-align: center;
     font-size: 30px;
-}
-select{
+}select{
     width: 400px;
     text-align: center;
-}
-.list-box{
+}.list-box{
     width: 100%;
     height: 700px;
     display: flex;
-    
-}
-.list{
+}.list{
     width: 80%;
     height: 700px;
     padding: 20px;
-}
-.list img{
+}.list img{
     width: 100%;
     height: 100%;
     object-fit: cover;
     border: black 1px solid;
-}
-.list-caption{
+}.list-caption{
     padding-top: 30px;
     padding-left: 20px;
     font-size: 20px;
-}
-#text-contents{
+}#text-contents{
     width: 100%;
-}
-.select-btn{
+}.select-btn{
     width: 100%;
     height: 20%;
 }
