--- a/test11.css
+++ b/test11.css
@@ -19,18 +19,28 @@ body{
     font-size: 20px;
    
 }
+.profile h1{
+    padding-left: 15px;
+    font-size: 80px;
+    font-family: 'Allison', cursive;
+}
 .main-sentence{
     position: absolute;
     top: 240px;
-    font-size: 30px;
+    font-size: 20px;
+    
 }
 .detail-section{
-    width: 50%;
+    width: 30%;
     display: none;
     position: absolute;
- 
+    font-size: 15px;
     line-height: 30px;
-    top: 100px;
+    top: 180px;
+    padding-top:  60px;
+    /*padding:0px 50px;*/
+    padding-right: 50px ;
+    padding-left: 150px;
 }
 .photo{
     margin-top: 100px;
