--- a/test10.css
+++ b/test10.css
@@ -121,6 +121,9 @@ body{
 .menu :hover{
     color:rgba(34, 49, 52, 0.5);
 }
+.menu-icon{
+    display: none;
+}
 .detail{
     width: 100%;
     height: 1200px;
@@ -148,9 +151,10 @@ body{
     display:none;
 }
 .main-sentence{
+    width: 40%;
     position: absolute;
     top: 240px;
-    font-size: 17px;
+    font-size: 15px;
     margin-left: 5%;
     
 }
@@ -184,14 +188,14 @@ body{
     opacity: 0.3;  
 }
 .add-contents{
-   height: 800px;
+   
     padding:30px 50px;
     position:relative;
     font-size:0px;
 } 
 .contents{
-    padding:10px 10px;
-    width:100%;
+    padding:0px 10px;
+    width:25%;
 }
 .contents-box{
     width:100%;
