--- a/test10.css
+++ b/test10.css
@@ -171,6 +171,9 @@ body{
     /*padding-right: 50px ;
     padding-left: 150px;*/
 }
+#piascore{
+    color: silver;
+}
 .photo{
     position: absolute;
  
